# VK_Sirius_Database

./: .dockerignore  CMakeLists.txt  CMakeLists2.txt  Dockerfile  api-documentation.txt  docker-compose.yml  readme.txt
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js
functional_test_db/: manager.db
include/: config.h  database-handler.cpp.h  http-server.h  json-handler.h  log-handler.h  sessionManager.h  storage_engine.h  table-handler.h  types.h  userManager.h  utils.h  windowManager.h
include/api/: database_manager.h  http_server.h  json_handler.h
include/query_engine/: ast.h  ast_builder.h  executor.h  lexer.h  optimizer.h  parser.h  token.h
include/storage/: in_memory_storage.h  optimized_in_memory_storage.h
include/storage_engine/: cache_manager.h  file_manager.h  index_manager.h  lock_manager.h  table_manager.h
include/utils/: activity_logger.h  logger.h
performance_db/: manager.db
src/: database-handler.cpp  http-server.cpp  json-handler.cpp  log-handler.cpp  main.cpp  sessionManager.cpp  table-handler.cpp  terminal_app.cpp  userManager.cpp  windowManager.cpp
src/api/: database_manager.cpp  http_server.cpp  json_handler.cpp  storage_engine.cpp
src/common/: bit_utils.h  encoding.h
src/physical/: block_data_io.cpp  block_data_io.h  catalog.cpp  catalog.h  column_manager.cpp  column_manager.h  file_manager.cpp  file_manager.h  heap_io.cpp  heap_io.h  space_manager_io.cpp  space_manager_io.h  table.cpp  table.h
src/query_engine/: ast_builder.cpp  executor.cpp  lexer.cpp  optimizer.cpp  parser.cpp
src/storage/: OptimizedInMemoryStorage.cpp
src/storage_engine/: cache_manager.cpp  file_manager.cpp  index_manager.cpp  lock_manager.cpp  table_manager.cpp
src/utils/: activity_logger.cpp
tests/: additional_subquery_tests.cpp  basic_operation_tests.cpp  comprehensive_tests.cpp  data_type_tests.cpp  drop_tests.cpp  final_boss.cpp  final_stress_test.cpp  like_tests.cpp  new_json_format_tests.cpp  run_drop_tests.cpp  run_tests.cpp  subquery_tests.cpp  test_executor.cpp  test_framework.h  test_lexer.cpp  test_optimized.cpp  test_parser.cpp  test_table_options.cpp  test_utils.h
